--- a/Web/frontend/src/App.css
+++ b/Web/frontend/src/App.css
@@ -40,7 +40,22 @@
   display: flex;
   flex-direction: column;
   padding: 0 32px 0 0;
-  margin-bottom: 70px;
+  margin-bottom: 30px;
+}
+
+.InputOp2{
+  display: flex;
+  flex-direction: column;
+  padding: 0 32px 0 0;
+  margin-left: 40px;
+}
+
+.InputOp3{
+  display: flex;
+  flex-direction: column;
+  padding: 0 32px 0 0;
+  margin-left: 40px;
+  margin-top: 220px;
 }
 .App {
   height: calc(100vh - 128px);
@@ -60,4 +75,16 @@
 .Input {
   width: 300px;
   margin-left: 100px;
+}
+.Extra{
+  display: flex;
+}
+#button_submit{
+  margin-left: 200px;
+}
+.ReportsTable{
+  width: 800px;
+}
+.date{
+  margin-top: 30px;
 }
